# splico

./: .gitignore  README.md  pyproject.toml
examples/: bif_from_curves.py  bif_from_matrices.py  bif_simple.py  fit.py  interpolate.py  vessel.py
splico/: __init__.py  _jit.py  err.py  kron.py  log.py  types.py  util.py
splico/geo/: __init__.py  aux.py  bif.py  disc.py  interp.py  notwist.py
splico/geo/bif/: __init__.py
splico/geo/cross/: control.py  disc.py  mul.py  util.py
splico/geo/frame/: __init__.py  notwist.py
splico/mesh/: __init__.py  _bool.py  _cyroutines.pyx  _gmsh.py  _jit.py  _jit_deprecated.py  _jit_ref_structured.py  _ref_structured.py  _ref_structured_deprecated.py  _refine.py  aux.py  bool.py  element.py  export.py  mesh.py  meta.py  plot.py  pol.py  qual.py  skewness.py  tetgen.py
splico/nutils/: __init__.py  interface.py  mul.py  topo.py  util.py
splico/qual/: qual.py
splico/spl/: __init__.py  _jit_spl.py  aux.py  kv.py  meta.py  prolong.py  spline.py
splico/topo/: __init__.py  topo.py
test/: output_surface.stl  run_all.py  test_cross_section.py  test_interp.py  test_jit_spl.py  test_kron.py  test_kv.py  test_mesh.py  test_notwist.py  test_nutils.py  test_qual.py  test_skew.py  test_spline.py  test_topo.py  test_types.py  test_union.py
